--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
 		integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/402ab2e351.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/402ab2e351.js" crossorigin="anonymous"></script>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,300;0,400;0,500;0,700;1,100&family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,400&display=swap"
+		rel="stylesheet">
 	<title>Daniel Boone</title>
 </head>
 
 <body>
-<header></header>
-<section></section>
-<footer></footer>
+	<header></header>
+	<section></section>
+	<footer></footer>
 </body>
 
 </html>
