--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-home list-inline-item menu-item"
                 >
-                  <a class="hvr-sweep-to-bottom" href="#"
+                  <a class="hvr-sweep-to-bottom" href="index.html"
                     ><i class="fa fa-home" aria-hidden="true"></i
                     ><span>Home</span></a
                   >
@@ -53,7 +53,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menu-item"
                 >
-                  <a class="hvr-sweep-to-bottom" href="#"
+                  <a class="hvr-sweep-to-bottom" href="resume.html"
                     ><i class="fa fa-graduation-cap" aria-hidden="true"></i
                     ><span>Resume</span></a
                   >
@@ -61,7 +61,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menu-item"
                 >
-                  <a class="hvr-sweep-to-bottom" href="#"
+                  <a class="hvr-sweep-to-bottom" href="contact.html"
                     ><i class="fa fa-comment-o" aria-hidden="true"></i
                     ><span>Contact</span></a
                   >
@@ -82,6 +82,33 @@
     </header>
 
     <section></section>
-    <footer></footer>
+    <footer class="container-fluid">
+      <div id="footer-details" class="row">
+        <div class="col-sm-4">
+          <h5 class="uppercase general-sub">About</h5>
+          <p class="inline-block">
+            Jr. Full-stack Developer with an extensive background in Software
+            Testing
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <h5 class="uppercase general-sub">Download</h5>
+          <p class="inline-block">
+            Need a printable version of my CV? Get it here!
+            <a href="#" target="_blank" class="cv-pdf"
+              ><i class="fa fa-download" aria-hidden="true"></i
+            ></a>
+            <span class="sr-only">Download link.</span>
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <h5 class="uppercase general-sub">Social</h5>
+          <ul class="list-inline social-links">
+            <li class="list-inline-item"><a target="_blank" href="https://github.com/Dutchie1990"><i class="fa fa-github"></i><span class="sr-only">Github</span></a></li>
+            <li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/daniel-boone-b8578579/"><i class="fa fa-linkedin"></i><span class="sr-only">LinkedIn</span></a></li>           
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
