--- a/resume.html
+++ b/resume.html
@@ -1,23 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://kit.fontawesome.com/402ab2e351.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,300;0,400;0,500;0,700;1,100&family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
+      integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <title>Daniel Boone</title>
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-		integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-	<script src="https://kit.fontawesome.com/402ab2e351.js" crossorigin="anonymous"></script>
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link
-		href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,300;0,400;0,500;0,700;1,100&family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,400&display=swap"
-		rel="stylesheet">
-	<title>Daniel Boone</title>
-</head>
+  <body>
+    <header>
+      <div class="row no-gutters">
+        <a class="logo col-md-4" href="index.html"></a>
+        <div class="col-md-8">
+          <div class="row bg-color-name-title no-gutters">
+            <div class="col heading">
+              <h1 class="name">Daniel C. Boone</h1>
+              <h2 class="title">Junior Full-Stack Developer</h2>
+            </div>
+          </div>
+          <div class="row no-gutters">
+            <div class="col">
+              <ul id="nav" class="list-inline menu-container">
+                <li
+                  class="col-6 col-sm-3 ui-menu-color-home list-inline-item menu-item"
+                >
+                  <a class="hvr-sweep-to-bottom" href="#"
+                    ><i class="fa fa-home" aria-hidden="true"></i
+                    ><span>Home</span></a
+                  >
+                </li>
+                <li
+                  class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menu-item"
+                >
+                  <a class="hvr-sweep-to-bottom" href="#"
+                    ><i class="fa fa-graduation-cap" aria-hidden="true"></i
+                    ><span>Resume</span></a
+                  >
+                </li>
+                <li
+                  class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menu-item"
+                >
+                  <a class="hvr-sweep-to-bottom" href="#"
+                    ><i class="fa fa-comment-o" aria-hidden="true"></i
+                    ><span>Contact</span></a
+                  >
+                </li>
+                <li
+                  class="col-6 col-sm-3 ui-menu-color-download list-inline-item menu-item"
+                >
+                  <a class="hvr-sweep-to-bottom" href="#"
+                    ><i class="fa fa-download" aria-hidden="true"></i
+                    ><span>Download</span></a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
 
-<body>
-	<header></header>
-	<section></section>
-	<footer></footer>
-</body>
-
+    <section></section>
+    <footer class="container-fluid">
+      <div id="footer-details" class="row">
+        <div class="col-sm-4">
+          <h5 class="uppercase general-sub">About</h5>
+          <p class="inline-block">
+            Jr. Full-stack Developer with an extensive background in Software
+            Testing
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <h5 class="uppercase general-sub">Download</h5>
+          <p class="inline-block">
+            Need a printable version of my CV? Get it here!
+            <a href="#" target="_blank" class="cv-pdf"
+              ><i class="fa fa-download" aria-hidden="true"></i
+            ></a>
+            <span class="sr-only">Download link.</span>
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <h5 class="uppercase general-sub">Social</h5>
+          <ul class="list-inline social-links">
+            <li class="list-inline-item"><a target="_blank" href="https://github.com/Dutchie1990"><i class="fa fa-github"></i><span class="sr-only">Github</span></a></li>
+            <li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/daniel-boone-b8578579/"><i class="fa fa-linkedin"></i><span class="sr-only">LinkedIn</span></a></li>           
+          </ul>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
