three reasons section

--- a/index.html
+++ b/index.html
@@ -81,7 +81,78 @@
       </div>
     </header>
 
-    <section></section>
+    <section class="container-fluid">
+      <div class="row row-table">
+        <div class="col-md-8 bg-color-three-reasons section-column">
+          <div class="row">
+            <div class="col">
+              <h3 class="section-heading uppercase">About Me</h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+              <div class="row">
+                <div class="col-2">
+                  <i
+                    class="three-reasons-icon fa fa-question"
+                    aria-hidden="true"
+                  ></i>
+                </div>
+                <div class="col-10">
+                  <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                  <p>
+                    I'm a skilled Jr. Full-Stack Engineer with a wealth of
+                    diverse life and technical experiences that I bring to every
+                    project.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+              <div class="row">
+                <div class="col-2">
+                  <i
+                    class="three-reasons-icon fa fa-thumbs-up"
+                    aria-hidden="true"
+                  ></i>
+                </div>
+                <div class="col-10">
+                  <h4 class="three-reasons-heading uppercase">
+                    How do I do it?
+                  </h4>
+                  <p>
+                    I follow form as well as function. I know that the
+                    aesthetics of effective design combined with applicationo
+                    speed, security and reliability combine to create a great
+                    user experience.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+              <div class="row">
+                <div class="col-2">
+                  <i
+                    class="three-reasons-icon fa fa-bolt"
+                    aria-hidden="true"
+                  ></i>
+                </div>
+                <div class="col-10">
+                  <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
+                  <p>
+                    I work quickly and effectively in getting things done and
+                    working across different stacks. I am an excellent
+                    communicator who thrives in bright and enthusiastic teams,
+                    but I am also a self-starter when working solo.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <footer class="container-fluid">
       <div id="footer-details" class="row">
         <div class="col-sm-4">
@@ -104,8 +175,20 @@
         <div class="col-sm-4">
           <h5 class="uppercase general-sub">Social</h5>
           <ul class="list-inline social-links">
-            <li class="list-inline-item"><a target="_blank" href="https://github.com/Dutchie1990"><i class="fa fa-github"></i><span class="sr-only">Github</span></a></li>
-            <li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/daniel-boone-b8578579/"><i class="fa fa-linkedin"></i><span class="sr-only">LinkedIn</span></a></li>           
+            <li class="list-inline-item">
+              <a target="_blank" href="https://github.com/Dutchie1990"
+                ><i class="fa fa-github"></i
+                ><span class="sr-only">Github</span></a
+              >
+            </li>
+            <li class="list-inline-item">
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/daniel-boone-b8578579/"
+                ><i class="fa fa-linkedin"></i
+                ><span class="sr-only">LinkedIn</span></a
+              >
+            </li>
           </ul>
         </div>
       </div>
