finalize index.html

--- a/index.html
+++ b/index.html
@@ -82,7 +82,48 @@
     </header>
 
     <section class="container-fluid">
-      <div class="row row-table">
+      <div class="row">
+        <div class="col-md-4 bg-color-personal-info section-column">
+          <div class="row">
+            <div class="col-12">
+              <h3 class="section-heading uppercase">Personal info</h3>
+            </div>
+          </div>
+          <div class="personal-info-item">
+            <div class="key">
+              <p class="uppercase">Name:</p>
+            </div>
+            <div class="value">
+              <p>Daniel C Boone</p>
+            </div>
+          </div>
+          <div class="personal-info-item">
+            <div class="key">
+              <p class="uppercase">Adress:</p>
+            </div>
+            <div class="value">
+              <p>Schiedamse weg 12</p>
+              <p>3928EP</p>
+              <p>Schiedam</p>
+            </div>
+          </div>
+          <div class="personal-info-item">
+            <div class="key">
+              <p class="uppercase">Phone:</p>
+            </div>
+            <div class="value">
+              <p>0031 649 39 49</p>
+            </div>
+          </div>
+                    <div class="personal-info-item">
+            <div class="key">
+              <p class="uppercase">Email:</p>
+            </div>
+            <div class="value">
+              <p>Test@testemail.email</p>
+            </div>
+          </div>
+        </div>
         <div class="col-md-8 bg-color-three-reasons section-column">
           <div class="row">
             <div class="col">
