finishing up resume section

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                   </h4>
                   <p>
                     I follow form as well as function. I know that the
-                    aesthetics of effective design combined with applicationo
+                    aesthetics of effective design combined with application
                     speed, security and reliability combine to create a great
                     user experience.
                   </p>
