--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-home list-inline-item menu-item"
                 >
-                  <a class="hvr-sweep-to-bottom" href="#"
+                  <a class="hvr-sweep-to-bottom" href="index.html"
                     ><i class="fa fa-home" aria-hidden="true"></i
                     ><span>Home</span></a
                   >
@@ -53,7 +53,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menu-item"
                 >
-                  <a class="hvr-sweep-to-bottom" href="#"
+                  <a class="hvr-sweep-to-bottom" href="resume.html"
                     ><i class="fa fa-graduation-cap" aria-hidden="true"></i
                     ><span>Resume</span></a
                   >
@@ -61,7 +61,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menu-item"
                 >
-                  <a class="hvr-sweep-to-bottom" href="#"
+                  <a class="hvr-sweep-to-bottom" href="contact.html"
                     ><i class="fa fa-comment-o" aria-hidden="true"></i
                     ><span>Contact</span></a
                   >
@@ -69,7 +69,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-download list-inline-item menu-item"
                 >
-                  <a class="hvr-sweep-to-bottom" href="#"
+                  <a class="hvr-sweep-to-bottom" href="assets/cv/Daniel_Boone.pdf" target="_blank"
                     ><i class="fa fa-download" aria-hidden="true"></i
                     ><span>Download</span></a
                   >
@@ -81,7 +81,29 @@
       </div>
     </header>
 
-    <section></section>
+    <section class="container-fluid"></section>
+        <div class="row bg-color-contact">
+            <div class="col">
+                <h3 class="contact-heading uppercase text-center">Got a project in mind?</h3>
+                <h5 class="uppercase text-center">Let's work together!</h5>
+
+                <div class="center-form">
+                    <form>
+                        <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required>
+                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required>
+                        <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Please describe your project.." required></textarea>
+                        <div class="form-row text-center">  
+                            <div class="col">
+                                <button type="submit" class="btn btn-secondary">Send Project Request</button>
+                            </div>
+                        
+                        </div>
+                    </form>   
+                </div>
+            
+            </div>
+        </div>
+
     <footer class="container-fluid">
       <div id="footer-details" class="row">
         <div class="col-sm-4">
@@ -95,7 +117,7 @@
           <h5 class="uppercase general-sub">Download</h5>
           <p class="inline-block">
             Need a printable version of my CV? Get it here!
-            <a href="#" target="_blank" class="cv-pdf"
+            <a href="assets/cv/Daniel_Boone.pdf" target="_blank" class="cv-pdf"
               ><i class="fa fa-download" aria-hidden="true"></i
             ></a>
             <span class="sr-only">Download link.</span>
