--- a/resume.html
+++ b/resume.html
@@ -45,15 +45,15 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-home list-inline-item menu-item"
                 >
-                  <a class="hvr-sweep-to-bottom" href="#"
-                    ><i class="fa fa-home" aria-hidden="true"></i
+                  <a class="hvr-sweep-to-bottom" href="index.html">
+                    <i class="fa fa-home" aria-hidden="true"></i
                     ><span>Home</span></a
                   >
                 </li>
                 <li
                   class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menu-item"
                 >
-                  <a class="hvr-sweep-to-bottom" href="#"
+                  <a class="hvr-sweep-to-bottom" href="resume.html"
                     ><i class="fa fa-graduation-cap" aria-hidden="true"></i
                     ><span>Resume</span></a
                   >
@@ -61,7 +61,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menu-item"
                 >
-                  <a class="hvr-sweep-to-bottom" href="#"
+                  <a class="hvr-sweep-to-bottom" href="contact.html"
                     ><i class="fa fa-comment-o" aria-hidden="true"></i
                     ><span>Contact</span></a
                   >
@@ -69,7 +69,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-download list-inline-item menu-item"
                 >
-                  <a class="hvr-sweep-to-bottom" href="#"
+                  <a class="hvr-sweep-to-bottom" href="assets/cv/Daniel_Boone.pdf" target="_blank"
                     ><i class="fa fa-download" aria-hidden="true"></i
                     ><span>Download</span></a
                   >
@@ -202,7 +202,7 @@
           <h5 class="uppercase general-sub">Download</h5>
           <p class="inline-block">
             Need a printable version of my CV? Get it here!
-            <a href="#" target="_blank" class="cv-pdf"
+            <a href="assets/cv/Daniel_Boone.pdf" target="_blank" class="cv-pdf"
               ><i class="fa fa-download" aria-hidden="true"></i
             ></a>
             <span class="sr-only">Download link.</span>
