--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
                 <div class="row no-gutters">
                     <div class="col">
                         <ul id="nav" class="list-inline menu-container">
-                            <li class="col-6 col-sm-2 ui-menu-color-home list-inline-item menu-item">
+                            <li class="col-xs-6  col-sm-2 ui-menu-color-home list-inline-item menu-item">
                                 <a class="hvr-sweep-to-bottom" href="index.html"><i class="fa fa-home"
                                         aria-hidden="true"></i><span>Home</span></a>
                             </li>
