--- a/github.html
+++ b/github.html
@@ -11,8 +11,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/github-styles.css" type="text/css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-
+    
+    <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/js/github-information.js"></script>
+    
 </head>
 
 <body>
@@ -29,7 +32,7 @@
                 <div class="row no-gutters">
                     <div class="col">
                         <ul id="nav" class="list-inline menu-container">
-                            <li class="col-6 col-sm-2 ui-menu-color-home list-inline-item menu-item">
+                            <li class="col-xs-6  col-sm-2 ui-menu-color-home list-inline-item menu-item">
                                 <a class="hvr-sweep-to-bottom" href="index.html"><i class="fa fa-home"
                                         aria-hidden="true"></i><span>Home</span></a>
                             </li>
