rendering information from github

--- a/github.html
+++ b/github.html
@@ -71,7 +71,7 @@
             </div>
 
             <div class="center-form">
-                <input type="text" id="gh-username" value="octocat" oninput="fetchGitHubInformation()">
+                <input type="text" id="gh-username" value="octocat" onchange="fetchGitHubInformation()">
                 <div id="gh-user-data" class="clearfix"></div>
                 <div id="gh-repo-data" class="clearfix"></div>
             </div>
